; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_schedule_path_challenge.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_schedule_path_challenge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.st_quicly_pending_path_challenge_t** }
%struct.st_quicly_pending_path_challenge_t = type { i32, %struct.st_quicly_pending_path_challenge_t*, i32 }

@PTLS_ERROR_NO_MEMORY = common dso_local global i32 0, align 4
@QUICLY_PATH_CHALLENGE_DATA_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32, i32*)* @schedule_path_challenge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @schedule_path_challenge(%struct.TYPE_7__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.st_quicly_pending_path_challenge_t*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = call %struct.st_quicly_pending_path_challenge_t* @malloc(i32 24)
  store %struct.st_quicly_pending_path_challenge_t* %9, %struct.st_quicly_pending_path_challenge_t** %8, align 8
  %10 = icmp eq %struct.st_quicly_pending_path_challenge_t* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @PTLS_ERROR_NO_MEMORY, align 4
  store i32 %12, i32* %4, align 4
  br label %37

13:                                               ; preds = %3
  %14 = load %struct.st_quicly_pending_path_challenge_t*, %struct.st_quicly_pending_path_challenge_t** %8, align 8
  %15 = getelementptr inbounds %struct.st_quicly_pending_path_challenge_t, %struct.st_quicly_pending_path_challenge_t* %14, i32 0, i32 1
  store %struct.st_quicly_pending_path_challenge_t* null, %struct.st_quicly_pending_path_challenge_t** %15, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.st_quicly_pending_path_challenge_t*, %struct.st_quicly_pending_path_challenge_t** %8, align 8
  %18 = getelementptr inbounds %struct.st_quicly_pending_path_challenge_t, %struct.st_quicly_pending_path_challenge_t* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load %struct.st_quicly_pending_path_challenge_t*, %struct.st_quicly_pending_path_challenge_t** %8, align 8
  %20 = getelementptr inbounds %struct.st_quicly_pending_path_challenge_t, %struct.st_quicly_pending_path_challenge_t* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @QUICLY_PATH_CHALLENGE_DATA_LEN, align 4
  %24 = call i32 @memcpy(i32 %21, i32* %22, i32 %23)
  %25 = load %struct.st_quicly_pending_path_challenge_t*, %struct.st_quicly_pending_path_challenge_t** %8, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load %struct.st_quicly_pending_path_challenge_t**, %struct.st_quicly_pending_path_challenge_t*** %29, align 8
  store %struct.st_quicly_pending_path_challenge_t* %25, %struct.st_quicly_pending_path_challenge_t** %30, align 8
  %31 = load %struct.st_quicly_pending_path_challenge_t*, %struct.st_quicly_pending_path_challenge_t** %8, align 8
  %32 = getelementptr inbounds %struct.st_quicly_pending_path_challenge_t, %struct.st_quicly_pending_path_challenge_t* %31, i32 0, i32 1
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  store %struct.st_quicly_pending_path_challenge_t** %32, %struct.st_quicly_pending_path_challenge_t*** %36, align 8
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %13, %11
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local %struct.st_quicly_pending_path_challenge_t* @malloc(i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
